--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,11 +2,11 @@ sonar.projectKey=PasinduPramodya_project
 sonar.organization=pasindupramodya
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=project
-#sonar.projectVersion=1.0
+sonar.projectName=project
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
